@@ -10,6 +10,14 @@ toolbars
 Fixed bug that would hide the Remote Display tab in VM settings
 while a VM is running
 
+Fixed Preview section update bug that would not update the preview
+window at the selected interval
+
+Removed obsolete configuration items from config.php-example
+
+Fixed UI updating of UI components when a VM is added or removed
+from a selected group or its subgroups 
+
 -------------------------------------
 	4.2-2	2012-10-15
 -------------------------------------
